--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,10 @@
 body {
   font-family: 'Noto Sans', sans-serif;
 }
-
+img.center-block {
+  display: block;
+  margin: 0 auto;
+}
 
 .footer .icon-link {
     font-size: 25px;
